deployment/petstore/petstore.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "petstore"
  namespace: "petstore"
  labels:
    name: "petstore"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore
  namespace: petstore
  labels:
    app: petstore
spec:
  selector:
    matchLabels:
      app: petstore
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
        - name: petstore
          image: quay.io/3scale/authorino:echo-api
          ports:
            - containerPort: 3000
              name: http
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: petstore
  namespace: petstore
spec:
  selector:
    app: petstore
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
